# advent2023

./: README.md
a01/: CHANGELOG.md  a01.cabal
a01/app/: Main.hs
a01/src/: MyLib.hs
a02/: CHANGELOG.md  a02.cabal
a02/app/: Main.hs
a02/src/: MyLib.hs
a03/: CHANGELOG.md  a03.cabal
a03/app/: Main.hs
a03/src/: MyLib.hs  Part1.hs  Part2.hs
a07/: CHANGELOG.md  LICENSE  a07.cabal
a07/app/: Main.hs
a07/src/: Part1.hs  Part2.hs
a10/: CHANGELOG.md  a10.cabal
a10/app/: Main.hs
a18/: Program.fs
a18/assets/: example-field.txt
a25/: README.md  networkx-pyvis.html  notebook.ipynb  requirements.txt
