cabal-version:      3.0
name:               a03
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Lars
maintainer:         lars.baker@uc.se
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Part1
                     ,Part2
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      megaparsec,
                      text,
                      extra
    hs-source-dirs:   src
    default-language: GHC2021

executable a03
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        text,
        megaparsec,
        a03

    hs-source-dirs:   app
    default-language: GHC2021
